[package]
name = "cli"
version = "0.3.0"
description = "CLI for Omega Predictions Protocol"
authors = ["Blockworks <hello@blockworks.foundation>"]
license = "Apache-2.0"
edition = "2018"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
client = { path = "../client" }
anyhow = "1.0.36"
clap = "3.0.0-beta.2"
solana-client = "1.5.4"
solana-cli = "1.5.4"
solana-sdk = "1.5.4"
omega = { version = "0.3.0", path = "../program", features=["no-entrypoint"] }
spl-token = { version = "^3.0", features=["no-entrypoint"] }
spl-token-swap = { version = "*",  git = "https://github.com/solana-labs/solana-program-library.git", features=["no-entrypoint"]}
serde_json = "1.0.60"
chrono = "0.4.19"
