[package]
name = "client"
version = "0.2.0"
description = "Client for Omega Predictions Protocol"
authors = ["Blockworks <hello@blockworks.foundation>"]
license = "Apache-2.0"
edition = "2018"


[dependencies]
solana-sdk = { version = "1.4.17", features=["default"]}
spl-token = { version = "^3.0", features=["no-entrypoint"] }
anyhow = "^1.0.36"
solana-client = "1.4.17"
rand = "0.7.3"
serde_json = "1.0.60"
bs58 = "0.4.0"
bincode = "1.3.1"
bytemuck = "1.4.1"
tiny-bip39 = "0.7.3"
tiny-hderive = "0.2.1"
ed25519-dalek = "1.0.0-pre.4"
