[package]
name = "omega"
version = "0.3.0"
description = "Omega Predictions Protocol"
authors = ["Blockworks <hello@blockworks.foundation>"]
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.5.4"
spl-token = { version = "^3.0.0", features=["no-entrypoint"] }
byteorder = "1.3.4"
arrayref = "0.3.6"
num_enum = "0.5.1"
bytemuck = "1.4.1"
safe-transmute = "0.11.0"
enumflags2 = "=0.6.4"
static_assertions = "1.1.0"
thiserror = "1.0.22"
serde = "1.0.118"
bincode = "1.3.1"

[dev-dependencies]
solana-sdk = "1.5.4"

[profile.release]
lto = true

[lib]
name = "omega"
crate-type = ["cdylib", "lib"]
